--- a/wip/1.html
+++ b/wip/1.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="1" startnode="1" creator="Twine" creator-version="2.3.5" ifid="BDD5F995-6376-4429-9A8C-E58DF033A9FB" zoom="0.25" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Part 1: Seeds of resistance" tags="" position="1154,386" size="100,100">[[First Mission]]
+<tw-storydata name="1" startnode="1" creator="Twine" creator-version="2.3.5" ifid="BDD5F995-6376-4429-9A8C-E58DF033A9FB" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Part 1: Seeds of resistance" tags="" position="1154,386" size="100,100">[[First Mission]]
 [[The Way Back]]
 [[Train Ride]]
 [[Arrival]]
@@ -33,7 +33,69 @@ Barret: C&#39;mon newcomer. Follow me.
 [[Help Jessie]]
 
 [[Go back to the top|002001]]
-[[Go to control room|Control room with locked doors 002]]</tw-passagedata><tw-passagedata pid="4" name="Train Ride" tags="" position="2220,672" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="Arrival" tags="" position="3344,719" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="7th Heaven" tags="" position="3871,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="7" name="Debriefing" tags="" position="4021,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Childhood Promise" tags="" position="4171,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="9" name="The Next Morning" tags="" position="4321,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Check fallen guards" tags="" position="491,681" size="100,100">Received &quot;Potion&quot;!
+[[Go to control room|Control room with locked doors 002]]</tw-passagedata><tw-passagedata pid="4" name="Train Ride" tags="" position="2253.3333333333335,593.6666666666666" size="100,100">Wedge: Cloud never came.
+
+Biggs: Cloud...... Wonder if he was killed?
+
+Barret: No way!!
+
+Jessie: Cloud......
+
+Biggs: Say, do you think Cloud&#39;s......
+
+Biggs: Going to fight to the end for AVALANCHE!?
+
+Barret: The hell would I know!? Do I look like a mind reader?
+
+Barret: Hmph!! If y&#39;all weren&#39;t such screw-ups...
+
+Wedge: Hey, Barret! What about our money...?
+
+Wedge: Uh, nothin&#39;...sorry.
+
+Wedge: Ahhh......
+
+Wedge: Cloud!!
+
+Biggs: Cloud!!
+
+Jessie: Cloud......
+
+Cloud: Looks like I&#39;m a little late.
+
+Barret: You damn right, you&#39;re late!!
+
+Barret: Come waltzin&#39; in here makin&#39; a big scene!
+
+Cloud: It&#39;s no big deal. Just what I always do.
+
+Barret: Shi&#39;t!
+
+Barret: Havin&#39; everyone worried like that you don&#39;t give a damn &#39;bout no one but yourself!
+
+Cloud: Hmm...... You were worried about me!
+
+Barret: Wha!?
+
+Barret: I&#39;m takin&#39; it outta your money, hot stuff!
+
+Barret: Wake up!
+
+Barret: We&#39;re movin&#39; out! Follow me!
+
+Wedge: Hey, Cloud!! You were great back there!
+
+Biggs: Heh heh......Cloud! We&#39;ll do even better next time.
+
+Jessie: Be careful, I&#39;ll shut this.
+
+Jessie: Oh, Cloud!! Your face is pitch-black......
+
+Jessie: There you go!
+
+Jessie: Say, thanks for helping me back there at the Reactor!
+
+[[Follow Jessie|Passenger car on the train speaker]]</tw-passagedata><tw-passagedata pid="5" name="Arrival" tags="" position="3344,719" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="7th Heaven" tags="" position="3871,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="7" name="Debriefing" tags="" position="4021,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Childhood Promise" tags="" position="4171,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="9" name="The Next Morning" tags="" position="4321,671" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Check fallen guards" tags="" position="491,681" size="100,100">Received &quot;Potion&quot;!
 
 [[Continue|First Mission]]</tw-passagedata><tw-passagedata pid="11" name="In front of gate" tags="" position="695,966" size="100,100">Biggs: Wow! You used to be in SOLDIER all right! ...Not everyday ya find one in a group like AVALANCHE.
 
@@ -323,7 +385,7 @@ Person: Protectors of the planet: AVALANCHE
 
 [[Continue|Square with a fountain in the middle]]</tw-passagedata><tw-passagedata pid="41" name="Check item on the left side" tags="" position="1232,2191" size="100,100">Received &quot;Potion&quot;!
 
-[[Continue|Square with a fountain in the middle]]</tw-passagedata><tw-passagedata pid="42" name="Street overlooking train tracks" tags="" position="1576.6666666666667,2727.3333333333335" size="100,100">Soldier:
+[[Continue|Square with a fountain in the middle]]</tw-passagedata><tw-passagedata pid="42" name="Street overlooking train tracks" tags="" position="1576,2727" size="100,100">Soldier:
 	
 
 Hey! You there!!
@@ -398,7 +460,167 @@ Soldier:
 
 Enough babbling...... Grab him!!
 
-[[Train Ride]]</tw-passagedata></tw-storydata>
+[[Train Ride]]</tw-passagedata><tw-passagedata pid="43" name="Passenger car on the train" tags="" position="2263.3333333333335,992" size="100,100">[[Talk to the man sleeping on the right]]
+[[Talk to the man sitting on the left]]
+[[Talk to Barret]]
+[[Talk to Biggs]]
+[[Talk to Biggs again]]
+[[Talk to Wedge]]
+[[Talk to Wedge again]]
+[[Try to go into next car]]
+
+[[Talk to Jessie]]
+
+</tw-passagedata><tw-passagedata pid="44" name="Talk to the man sleeping on the right" tags="" position="2583.3333333333335,830.3333333333333" size="100,100">Man: Huh...? This is my house, so make yourselves at home.
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="45" name="Talk to the man sitting on the left" tags="" position="2571.6666666666665,1168.6666666666667" size="100,100">Man: You see the headlines in the Shinra Times?
+
+Man: The terrorists that bombed the No. 1 Reactor are based somewhere in the slums.
+
+Man: ...blowing up a Reactor... they sure put some thought into this one.
+
+Man: They must have a real calculating leader. I wonder what they&#39;ll do next?
+	
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="46" name="Talk to Barret" tags="" position="2580,1352" size="100,100">Barret: Stop actin&#39; like a damn kid. Si&#39;down an&#39; shu&#39;up!
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="47" name="Talk to Biggs" tags="" position="1896.6666666666665,1007" size="100,100">Biggs: It seems this train hasn&#39;t switched to security mode yet.
+
+Biggs: I&#39;m sure that will change by tomorrow.
+	
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="48" name="Talk to Biggs again" tags="" position="1901.6666666666665,1152" size="100,100">Biggs: ...YAWN...that sure took its toll on me. I&#39;m gonna sleep till we get to the station.
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="49" name="Talk to Wedge" tags="" position="1901.6666666666665,1392.0000000000002" size="100,100">Wedge: Someday AVALANCHE&#39;s gonna be famous ...and me, too!
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="50" name="Talk to Wedge again" tags="" position="1991.6666666666667,1540.3333333333333" size="100,100">Wedge: Cloud!!
+
+Wedge: Don&#39;t ya think I got a bright future ahead of me?
+
+[[What do you have in mind?]]
+
+[[I wouldn&#39;t hold my breath]]</tw-passagedata><tw-passagedata pid="51" name="Talk to Jessie" tags="" position="2291.666666666667,2072.0000000000005" size="100,100">Jessie: Hey, Cloud. You want to look at this with me?
+
+Jessie: It&#39;s a map of the Midgar Rail System. Let&#39;s look at it together. I&#39;ll explain it to you.
+
+Jessie: I like this kinda stuff. Bombs and monitors...you know, flashy stuff.
+
+[ROOTMAP: Last Train from Midgar] Screen showing an animation of Midgar&#39;s structure
+
+Jessie: Okay, it&#39;s about to start.
+
+Jessie: This is a complete model of the city of Midgar.
+
+Jessie: It&#39;s about a 1/10000 scale.
+
+Jessie: The top plate is about 50 meters above ground.
+
+Jessie: A main support structure holds the plate up in the center, and there are other support structures built in each section...
+
+Jessie: psst...whisper...whisper... (The No. 1 Reactor we blew up was in the northern section.)
+
+Jessie: Then there&#39;s No.2, No.3 all the way up to the No.8 Reactor.
+
+Jessie: The 8 Reactors provide Midgar with electricity.
+
+Jessie: Each town used to have a name, but no one in Midgar remembers them.
+
+Jessie: Instead of names, we refer to them by numbered sectors. That&#39;s the kind of place this is.
+
+Jessie: Phew..., this is next! Look.
+
+Jessie: This is the route this train is on.
+
+Jessie: The route spirals around the main support structure.
+
+Jessie: We should be coming around the center area, right now.
+
+Jessie: At each checkpoint, an ID sensor device is set up.
+
+Jessie: It can check the identities and background on each and every passenger on the train by linking it up to the central data bank at Shinra headquarters.
+
+Jessie: whisper...whisper... (Anyone could tell that we look suspicious, so we&#39;re using fake ID&#39;s.)
+
+Jessie: Cloud! Look this way.
+
+[[Continue|Passenger car on the train 002]]</tw-passagedata><tw-passagedata pid="52" name="Passenger car on the train speaker" tags="" position="2268.3333333333335,787" size="100,100">Speaker: Last train out of Sector 8 Station. Last stop is Sector 7, Train Graveyard. Expected time of arrival is 12:23AM, Midgar Standard Time...
+
+Man: This is why I hate the last train. Hoo-boy...
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="53" name="Try to go into next car" tags="" position="2568.3333333333335,1012" size="100,100">Man: Please!! You&#39;re bothering the other passengers.
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="54" name="I wouldn&#39;t hold my breath" tags="" position="1876.6666666666667,1678.6666666666667" size="100,100">Wedge: Oh man, that&#39;s pretty harsh, Cloud. You really think I won&#39;t?
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="55" name="What do you have in mind?" tags="" position="2125,1660.3333333333335" size="100,100">Wedge: All my life, I felt like nothin&#39; but a sidekick.
+
+Wedge: But, after joinin&#39; AVALANCHE and tryin&#39; to save the Planet, I feel like I can do lots of things.
+
+[[Continue|Passenger car on the train]]</tw-passagedata><tw-passagedata pid="56" name="Passenger car on the train 002" tags="" position="2300.0000000000005,2822.0000000000005" size="100,100">Jessie: Speak of the devil...
+
+Jessie: That light means that we&#39;re in the ID Security Check area.
+
+Jessie: ...whisper...whisper... (When the lights go off, you never know what kind of creeps&#39;ll come out.)
+
+Jessie: ...anyhow, we&#39;re almost back now. That&#39;s a relief.
+
+[[Talk to Biggs|Talk to Biggs 002]]
+
+[[Talk to Wedge|Talk to Wedge 002]]
+
+[[Talk to Jessie|Talk to Jessie 002]]
+
+[[Talk to Jessie again|Talk to Jessie again 002]]
+
+[[Walk toward Barret]]</tw-passagedata><tw-passagedata pid="57" name="Talk to Biggs 002" tags="" position="1898.3333333333337,2520.333333333334" size="100,100">Biggs: ...snore...heebeebeeheebee...snore... (Don&#39;t act so damn big, Barret...snooze...)
+
+[[Continue|Passenger car on the train 002]]</tw-passagedata><tw-passagedata pid="58" name="Thanks anyway" tags="" position="1915,2955.3333333333344" size="100,100">Jessie:	Oh yeah, you might regret it. I&#39;m the type who takes things personal.
+
+[[Continue|Passenger car on the train 002]]</tw-passagedata><tw-passagedata pid="59" name="Looking forward to it" tags="" position="1913.3333333333337,3138.6666666666674" size="100,100">Choose this if you want to date Aeris/Yuffie/Barret
+
+Jessie: Okay, then I&#39;ll put a little extra effort in and make it with a BANG.
+
+[[Continue|Passenger car on the train 002]]</tw-passagedata><tw-passagedata pid="60" name="Talk to Wedge 002" tags="" position="1888.3333333333337,2762.0000000000005" size="100,100">Wedge: I&#39;m seein&#39; stars. This sucks. I hate the dark.
+
+[[Continue|Passenger car on the train 002]]</tw-passagedata><tw-passagedata pid="61" name="Talk to Jessie 002" tags="" position="1711.6666666666672,2905.3333333333335" size="100,100">Jessie: I know!
+
+Jessie: Next time, I&#39;ll give you one I made myself.
+
+[[Thanks anyway]]
+
+[[Looking forward to it]]
+</tw-passagedata><tw-passagedata pid="62" name="Talk to Jessie again 002" tags="" position="2100.0000000000005,3250.3333333333335" size="100,100">Jessie: We&#39;re almost there. After talking with you, I really want to do it!
+
+Jessie: I think you&#39;ve lit my fuse!
+
+[[Continue|Passenger car on the train 002]]</tw-passagedata><tw-passagedata pid="63" name="Walk toward Barret" tags="" position="2383.3333333333335,3535.333333333334" size="100,100">Barret: Look...you can see the surface now. This city don&#39;t have no day or night.
+
+Barret: If that plate weren&#39;t there... we could see the sky.
+
+Cloud: A floating city... Pretty unsettling scenery.
+
+Barret: Huh?
+
+Barret: Never expect ta hear that outta someone like you.
+
+Barret: ...you jes&#39; full of surprises.
+
+Barret: The upper world...a city on a plate...
+
+Barret: It&#39;s &#39;cuz of that &amp;^#$# &#39;pizza&#39;, that people underneath are sufferin&#39;!
+
+Barret: And the city below is full of polluted air.
+
+Barret: On topa that, the Reactor keeps drainin&#39; up all the energy.
+
+Cloud: Then why doesn&#39;t everyone move onto the Plate?
+
+Barret: Dunno. Probably &#39;cuz they ain&#39;t got no money. Or, maybe...
+
+Barret: &#39;Cuz they love their land, no matter how polluted it gets.
+
+Cloud: I know... no one lives in the slums because they want to.
+
+Cloud: It&#39;s like this train. It can&#39;t run anywhere except where its rails take it.
+
+[[Continue|Arrival]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
