--- a/wip/1.html
+++ b/wip/1.html
@@ -107,7 +107,35 @@ Marlene: Welcome home, Cloud. Looks like everything went well.
 Tifa: Did you fight with Barret?
 
 [[Yeah]]
-[[Not this time]]</tw-passagedata><tw-passagedata pid="7" name="Debriefing" tags="" position="4779.333333333333,652.6666666666666" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Childhood Promise" tags="" position="4951,657.6666666666666" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="9" name="The Next Morning" tags="" position="5101,657.6666666666666" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Check fallen guards" tags="" position="491,681" size="100,100">Received &quot;Potion&quot;!
+[[Not this time]]</tw-passagedata><tw-passagedata pid="7" name="Debriefing" tags="" position="4779.333333333333,652.6666666666666" size="100,100">[[Check TV]]
+
+[[Talk to Wedge|Talk to Wedge006]]
+[[Talk to Jessie|Talk to Jessie006]]
+[[Talk to Jessie again|Talk to Jessie again006]]
+
+[[Approach Barret]]
+</tw-passagedata><tw-passagedata pid="8" name="Childhood Promise" tags="" position="5667.666666666666,644.3333333333333" size="100,100">Tifa: Listen, Cloud. I&#39;m asking you. Please join us.
+
+Cloud: Sorry Tifa...
+
+Tifa: The Planet is dying. Slowly but surely it&#39;s dying.
+
+Tifa: Someone has to do something.
+
+Cloud: So let Barret and his buddies do something about it.
+
+Cloud: It&#39;s got nothin&#39; to do with me.
+
+Tifa: So! You&#39;re really leaving !?
+
+Tifa: You&#39;re just going to walk right out ignoring your childhood friend !?
+
+Cloud: What......?
+
+[[How can you say that!]]
+[[......Sorry]]</tw-passagedata><tw-passagedata pid="9" name="The Next Morning" tags="" position="6297.666666666665,636" size="100,100"> [[Talk to Tifa|Talk to Tifa 007]]
+[[Talk to Barret|Talk to Barret 007]]
+[[Talk to Marlene|Talk to Marlene 077 003]]</tw-passagedata><tw-passagedata pid="10" name="Check fallen guards" tags="" position="491,681" size="100,100">Received &quot;Potion&quot;!
 
 [[Continue|First Mission]]</tw-passagedata><tw-passagedata pid="11" name="In front of gate" tags="" position="695,966" size="100,100">Biggs: Wow! You used to be in SOLDIER all right! ...Not everyday ya find one in a group like AVALANCHE.
 
@@ -835,7 +863,386 @@ Tifa: You&#39;d better go down below.
 
 Ride the pinball machine downstairs when ready.
 
-[[Go down|Debriefing]]</tw-passagedata></tw-storydata>
+[[Go down|Debriefing]]</tw-passagedata><tw-passagedata pid="95" name="Check TV" tags="" position="4384.333333333332,667.6666666666666" size="100,100">President Shinra: .........today the No.1 Reactor was bombed. The terrorist group AVALANCHE has claimed responsibility for the bombing.
+
+President Shinra: It is expected that AVALANCHE will continue its reign of terror.
+
+President Shinra: But citizens of Midgar, there is no need to fear.
+
+President Shinra: I have immediately mobilized SOLDIER to protect our citizenry against this senseless violence. Thank you and good night.
+
+[[Continue|Debriefing]] </tw-passagedata><tw-passagedata pid="96" name="Talk to Wedge006" tags="" position="5157.666666666666,702.6666666666666" size="100,100">Wedge: You think I&#39;m a little too uptight?
+
+[[Yeah...]]
+[[No...]]</tw-passagedata><tw-passagedata pid="97" name="Yeah..." tags="" position="5051,549.3333333333333" size="100,100">Wedge: The next mission will be to blow up the Sector 5 Reactor.
+
+Wedge: Cloud, you&#39;re great! Don&#39;t you ever get nervous?
+
+Wedge: Or are you like, impervious to feelings? Naw, that couldn&#39;t be it.
+
+[[Continue|Debriefing]] 
+
+</tw-passagedata><tw-passagedata pid="98" name="No..." tags="" position="5071,844.3333333333333" size="100,100">Wedge: Well, that&#39;s ok. Don&#39;t worry about me. I don&#39;t look like it, but I&#39;m a coward at heart.
+
+[[Continue|Debriefing]] </tw-passagedata><tw-passagedata pid="99" name="Talk to Jessie006" tags="" position="4444.333333333333,847.6666666666666" size="100,100">Jessie: Oops...
+
+Jessie: Hey, look at the news... What a blast.
+
+Jessie: Think it was all because of my bomb? But all I really did was just make it like the computer told me.
+
+Jessie: Oh no! I must&#39;ve made a miscalculation somewhere.
+	
+[[Continue|Debriefing]] </tw-passagedata><tw-passagedata pid="100" name="Talk to Jessie again006" tags="" position="4452.666666666666,1019.3333333333334" size="100,100">Jessie: Hey, that was my bomb&#39;s debut. Makes me kinda proud.
+
+[[Continue|Debriefing]] </tw-passagedata><tw-passagedata pid="101" name="Approach Barret" tags="" position="4785.999999999999,869.3333333333333" size="100,100">Barret: Yo, Cloud! There&#39;s somethin&#39; I wanna ask ya.
+
+Barret: Was there anyone from SOLDIER fighting us today?
+
+Cloud: None. I&#39;m positive.
+
+Barret: You sound pretty sure.
+
+Cloud: If there was anyone from SOLDIER you wouldn&#39;t be standing here now.
+
+Barret: Don&#39;t go thinkin&#39; you so bad jes cuz you was in SOLDIER.
+
+Cloud: ............
+
+Barret: Yeah, you&#39;re strong.
+
+Barret: Probably all them guys in SOLDIER are.
+
+Barret: But don&#39;t forget that your skinny ass&#39;s workin&#39; for AVALANCHE now!
+
+Barret: Don&#39;t get no ideas &#39;bout hangin&#39; on to Shinra.
+
+Cloud: Stayin&#39; with Shinra?
+
+Barret: You asked me a question and I answered it...that&#39;s all.
+
+Cloud: I&#39;m going upstairs. I want to talk about my money.
+
+[[Continue|Debriefing006]]</tw-passagedata><tw-passagedata pid="102" name="Debriefing006" tags="" position="4780.999999999999,1119.3333333333333" size="100,100">[[Talk to Barret|Talk to Barret 00602]]
+[[Talk to Marlene|Talk to Marlene 00602]]
+
+[[Go back toward pinball machine 01]]
+</tw-passagedata><tw-passagedata pid="103" name="Talk to Tifa 00602" tags="" position="4559.333333333333,2051" size="100,100">Tifa: Straighten things up with everyone for me.
+
+[[Continue|Go back toward pinball machine 02]] </tw-passagedata><tw-passagedata pid="104" name="Talk to Jessie 00602" tags="" position="4547.666666666666,1906" size="100,100">Jessie: Money...
+
+Jessie: Oh my. It must have been for a lot of it.
+
+Jessie: Sure! Well, what the hell? It&#39;s a verbal agreement. Now let me figure this out.
+
+Jessie: Oh stop it, Cloud! Did you hear me?
+
+[[Continue|Go back toward pinball machine 02]] </tw-passagedata><tw-passagedata pid="105" name="Talk to Barret 00602" tags="" position="5022.666666666666,1026" size="100,100">Barret: Shucks!! ............money...
+
+[[Continue|Debriefing006]] </tw-passagedata><tw-passagedata pid="106" name="Talk to Marlene 00602" tags="" position="5027.666666666665,1167.6666666666667" size="100,100">Marlene: Papa, you&#39;re so great!
+
+[[Continue|Debriefing006]] </tw-passagedata><tw-passagedata pid="107" name="Go back toward pinball machine 01" tags="" position="4802.666666666666,1540.9999999999998" size="100,100">Tifa: Wait, Cloud!
+
+Barret: Tifa! Let him go!
+
+Barret: Looks like he still misses the Shinra!
+
+Cloud: Shut up!
+
+Cloud: I don&#39;t care about either Shinra or SOLDIER!
+
+Cloud: But don&#39;t get me wrong!
+
+Cloud: I don&#39;t care about AVALANCHE or the Planet for that matter!
+
+[[Continue|Go back toward pinball machine 02]]
+</tw-passagedata><tw-passagedata pid="108" name="Go back toward pinball machine 02" tags="" position="4807.666666666666,1779.333333333333" size="100,100">[[Talk to Wedge|Talk to Wedge 00602]]
+[[Talk to Jessie|Talk to Jessie 00602]]
+[[Talk to Tifa|Talk to Tifa 00602]]
+	
+[[Go upstairs, try to leave|Childhood Promise]]</tw-passagedata><tw-passagedata pid="109" name="Talk to Wedge 00602" tags="" position="5051,1900.9999999999995" size="100,100">Wedge: .......Cloud.
+
+Wedge: You say you don&#39;t care, but you came to talk to me.
+
+Wedge: Cloud... You just want friends.
+
+Wedge: Isn&#39;t that right?
+
+[[Blow off]]
+[[I really don&#39;t care]]
+
+            
+</tw-passagedata><tw-passagedata pid="110" name="Blow off" tags="" position="5077.666666666667,2084.3333333333335" size="100,100">Wedge: Yeah, well. You look kind of lonely to me.
+
+Wedge: If you ever got anything you want to get off your chest, you can always talk to me.
+
+[[Continue|Go back toward pinball machine 02]]</tw-passagedata><tw-passagedata pid="111" name="I really don&#39;t care" tags="" position="5202.666666666666,1842.6666666666663" size="100,100">Wedge: You&#39;re terrible. Real cold blooded.
+
+[[Continue|Go back toward pinball machine 02]]</tw-passagedata><tw-passagedata pid="112" name="How can you say that!" tags="" position="5562.666666666666,827.6666666666666" size="100,100">
+
+ Choose this if you want to date Tifa
+
+[[Continue|Childhood Promise 2]]</tw-passagedata><tw-passagedata pid="113" name="......Sorry" tags="" position="5779.333333333333,816" size="100,100">Choose this if you want to date Aeris/Yuffie/Barret
+ 
+[[Continue|Childhood Promise 2]]</tw-passagedata><tw-passagedata pid="114" name="Childhood Promise 2" tags="" position="5667.666666666666,1036" size="100,100">Tifa: Please Cloud...
+
+Tifa: Cloud... I can&#39;t believe this is goodbye.
+
+Tifa: ......You forgot the promise, too.
+
+Cloud: Promise?
+
+Tifa: So you DID forget.
+
+Tifa: Remember......Cloud. It was seven years ago...
+
+[[Continue|Flashback in 7th Heaven]]</tw-passagedata><tw-passagedata pid="115" name="Flashback in 7th Heaven" tags="" position="5667.666666666666,1186" size="100,100">[NIVL_E1] Flashback scene by the well in Nibelheim
+
+Tifa: Look, the well.
+
+Tifa: Do you remember?
+
+Cloud: Yeah...back then.
+
+Cloud: I thought you would never come, and I was getting a little cold.
+
+Tifa: Sorry I&#39;m late.
+
+Tifa: You said you wanted to talk to me about something?
+
+Cloud: Come this spring...I&#39;m leaving this town for Midgar.
+
+Tifa: ...All boys are leaving our town.
+
+Cloud: But I&#39;m different from all of them. I&#39;m not just going to find a job.
+
+Cloud: I want to join SOLDIER.
+
+Cloud: I&#39;m going to be the best there is, just like Sephiroth!
+
+Tifa: Sephiroth... The Great Sephiroth.
+
+Tifa: Isn&#39;t it hard to join SOLDIER?
+
+Cloud: ...I probably won&#39;t be able to come back to this town for a while.
+
+Cloud: ...huh?
+
+Tifa: Will you be in the newspapers if you do well?
+
+Cloud: I&#39;ll try.
+
+Tifa: Hey, why don&#39;t we make a promise?
+
+Tifa: Umm, if you get really famous and I&#39;m ever in a bind......
+
+Tifa: You come save me, all right?
+
+Cloud: What?
+
+Tifa: Whenever I&#39;m in trouble, my hero will come and rescue me.
+
+Tifa: I want to at least experience that once.
+
+Cloud: What?
+
+Tifa: Come on--! Promise me----!
+
+Cloud: All right......I promise.
+
+[[Continue|End flashback]]
+</tw-passagedata><tw-passagedata pid="116" name="End flashback" tags="" position="5667.666666666666,1336" size="100,100">Tifa: You remember now, don&#39;t you... our promise?
+
+Cloud: I&#39;m not a hero and I&#39;m not famous. I can&#39;t keep......the promise.
+
+Tifa: But you got your childhood dream, didn&#39;t you? You joined SOLDIER.
+
+Tifa: So come on! You&#39;ve got to keep your promise......
+
+Barret: Wait a sec big-time SOLDIER!
+
+Barret: Whoa, wait a damn minute. Cloud!!
+
+Barret: A promise is a promise! Here!!
+
+Barret: There&#39;s your money. Now get the hell out!!
+
+Received Barret&#39;s stash, 1500 gil!
+
+Cloud: This is my pay? Don&#39;t make me laugh.
+
+Tifa: What? Then you&#39;ll...!!
+
+Cloud: You got the next mission lined up? I&#39;ll do it for 3000.
+
+Barret: What......!?
+
+Tifa: It&#39;s ok, it&#39;s ok.
+
+Tifa: psst, psst...... (We&#39;re really hurting for help, right?)
+
+Barret: Uh......ugh...... (That money&#39;s for Marlene&#39;s schoolin&#39;......)
+
+Barret: 2000!
+
+Tifa: Thanks, Cloud.
+
+[[Go back upstairs after sleeping|The Next Morning]]</tw-passagedata><tw-passagedata pid="117" name="The End of part 1" tags="" position="6324.333333333332,1914.3333333333333" size="100,100">YEAAAAAH</tw-passagedata><tw-passagedata pid="118" name="Talk to Tifa 007" tags="" position="6657.666666666666,646" size="100,100">. Don&#39;t do this if you want to date Aeris or Yuffie.
+
+ Tifa: Good Morning! Cloud!
+
+ Tifa: Did you sleep well?
+
+[[Barret&#39;s snoring kept me up......]]
+[[Next to you, who wouldn&#39;t?]]</tw-passagedata><tw-passagedata pid="119" name="Barret&#39;s snoring kept me up......" tags="" position="6615.999999999999,824.3333333333333" size="100,100"> Choose this if you want to date Barret
+
+Tifa: psstpsst...
+
+Tifa: (keep it down, they&#39;ll hear you. Barret&#39;s always edgy before an operation.)
+
+[[Continue|Talk to Tifa 007 02]]</tw-passagedata><tw-passagedata pid="120" name="Next to you, who wouldn&#39;t?" tags="" position="6812.666666666666,837.6666666666666" size="100,100">Choose this if you want to date Tifa
+
+Tifa: I don&#39;t know what you mean.
+  
+[[Continue|Talk to Tifa 007 02]]</tw-passagedata><tw-passagedata pid="121" name="Talk to Tifa 007 02" tags="" position="6607.666666666666,1062.6666666666665" size="100,100">Tifa: I&#39;m going this time.
+
+[[Continue|The Next Morning]]</tw-passagedata><tw-passagedata pid="122" name="Talk to Barret 007" tags="" position="6339.333333333331,1227.6666666666665" size="100,100">Barret: Our target&#39;s the Sector 5 Reactor. Head for the station first.
+
+Barret: I&#39;ll fill you in on the train.
+
+Barret: Yo! Cloud!
+
+Barret: Before the next mission, I got somethin&#39; I wanna ask you!
+
+Barret: I, uh,...... I don&#39;t really know how to use Materia!
+
+Barret: I&#39;ll give you that Materia you found. Just teach me how to use it!
+
+Cloud: ...sigh...
+
+[[Ok, I&#39;ll explain it]]
+[[You wouldn&#39;t understand]]</tw-passagedata><tw-passagedata pid="123" name="Ok, I&#39;ll explain it" tags="" position="6180.999999999997,1431" size="100,100">
+ Sure, I&#39;ll explain how Materia works.
+
+ First, access the menu.
+
+ You know the basic functions.
+
+ The triangle button brings up the menu.
+
+ Directional buttons move the cursor,
+
+ like this.
+
+ Select each menu by using the OK button.
+
+ If you want to leave the menu,
+
+ just push the CANCEL button.
+
+ See? Let&#39;s go ahead.
+
+ Now you&#39;re in this menu.
+
+ Select [Materia] sub menu.
+
+ Select who you want to use it.
+
+ Now look at my weapon here.
+
+ Each weapon and armor has slots in it.
+
+ Choose which slot you want to put Materia in.
+
+ Now select the Materia you want to use.
+
+ This is curative Materia.
+
+ If you want to know what its effect is,
+
+ line the cursor up with [Check],
+
+ and push the OK button.
+
+ It&#39;s just like selecting battle commands.
+
+ Just line the cursor up to [Magic],
+
+ you can see that the available magic has increased.
+
+ Now you can use new magic [Cure].
+
+ And that&#39;s all there is to equipping Materia.
+
+ See? It wasn&#39;t that tough!
+
+ When you want to remove any Materia,
+
+ it&#39;s as easy as pointing to the materia slot,
+
+ and pushing the triangle button.
+
+ There&#39;s just one thing you have to be careful of.
+
+ Whenever you equip Materia,
+
+ your situation changes.
+
+ Parts of you may become stronger...
+
+ while others get weaker.
+
+ Normally, when you equip [Magic] Materia,
+
+ your magic power will get stronger.
+
+ But your physical strength weakens.
+
+ So, Materia&#39;s kind of a double-edged sword.
+
+ On the left side of the screen,
+
+ you can see the Materia&#39;s effect on you.
+
+ It&#39;s wise not to overuse Magic Materia.
+
+ But try out various things.
+
+ Push the CANCEL button to exit the sub menu.
+
+ Ok, that&#39;s about it.
+
+ I&#39;ll give you some advanced tips later.
+
+ Barret:
+ 	
+
+ Shi......! What&#39;s this &#39;It wasn&#39;t that tough!&#39; crap!
+
+ I&#39;m clueless......
+
+ Well, you handle the Materia then!
+
+[[Continue|Talk to Barret 007 002]]</tw-passagedata><tw-passagedata pid="124" name="You wouldn&#39;t understand" tags="" position="6479.333333333331,1437.6666666666665" size="100,100">Barret: So this is what makes them guys in SOLDIER so great, huh!?
+
+Barret: Ok. I&#39;ll ask Jessie again later. But you&#39;re in charge of the Materia!
+
+[[Continue|Talk to Barret 007 002]]</tw-passagedata><tw-passagedata pid="125" name="Talk to Marlene 077 003" tags="" position="6684.333333333331,477.6666666666665" size="100,100">Marlene: Take care!</tw-passagedata><tw-passagedata pid="126" name="Talk to Barret 007 002" tags="" position="6330.999999999997,1546" size="100,100">[Materia System] Access the menu and select [Materia] to equip Materia.
+
+If you have not talked to Tifa in the morning
+
+ Tifa: I&#39;m going this time.
+
+Tifa: Cloud! I got a message from the Weapon Shop man upstairs.
+
+Tifa: He has something he wants to give you. Don&#39;t forget!
+
+Tifa: Marlene, you watch the store while we&#39;re gone!
+
+Marlene: All right!! Good Luck.
+
+New optional dialogue is available in Sector 7 and Beginner&#39;s Hall. New optional items can be picked up in Beginner&#39;s Hall. Do some shopping, and board the train when ready.
+
+[[The End of part 1]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
